# localMathRag

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_EN.md  config.example.toml  docker-compose.local.yml  package.json  pyproject.toml
.github/workflows/: contracts.yml  windows-release.yml
docker/: Dockerfile.ragflow-local  docker-compose.localmathrag.yml  docker-compose.webdist.yml  ragflow-localize-conf.py
docs/: ragflow-secondary-development.md  sample.docx
docs/deployment/: docker-cloud.md
examples/: kalman_sample.md  requirement_table.csv
extensions/local_math_rag/: README.md
launcher/LocalMathRAG/: LocalMathRAG.csproj  Program.cs
launcher/LocalMathRAGFlow/: LocalMathRAGFlow.csproj  Program.cs  app.manifest
patches/ragflow/: 0001-localmathrag-offline-ui.patch  0002-localmathrag-embedding-switch-check.patch  0003-localmathrag-default-dataset-refresh.patch  0004-localmathrag-search-summary-token-budget.patch  (+59 more)
scripts/: Build-Release.ps1  Install-LlamaCpp.ps1  Start-LocalMathRAG.cmd  Start-LocalMathRAG.ps1  Stop-LocalMathRAG.ps1  apply-ragflow-patches.ps1  bootstrap-ragflow.ps1  build-launcher.ps1  build-mtef-parser.ps1  build-ragflow-web.ps1  dev-down.ps1  dev-up.ps1  doctor.ps1  localmathrag-resource-plan.ps1  test-runtime-balancer.ps1
services/mtef_parser/: README.md  (+4 more)
tests/: test_contracts.py  test_external_samples.py  test_formula_pipeline.py  test_graphrag_adaptive.py  test_llm_client.py  test_ragflow_integration.py  test_resource_plan.ps1
tools/: fetch_external_samples.py  lookup_tool_server.py
(+30 files in other folders)
