[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookup-tool"
version = "0.1.0"
description = "Local formula-aware technical document lookup service for external agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.0.0",
  "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
parsing = ["docling>=2.0", "markitdown>=0.1"]
ocr = ["paddleocr>=3.0"]
ml = ["sentence-transformers>=3.0", "qdrant-client>=1.10"]
dev = ["pytest>=8.0"]

[project.scripts]
lookup-tool = "lookup_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lookup_tool = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
